src/test/deca/context/invalid/return/this_in_main_illegal_custom.deca
// Description :
// utilisation de this dans la méthode main
//
// Resultats :
// Erreur contextuelle
// Ligne 6 : this interdit dans main

class T {
    public static void main() {
        int x = this.hashCode(); // doit échouer
    }
}
